--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-#server.port=8090
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.database=MYSQL 
-#spring.jpa.show-sql=true
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://au77784bkjx6ipju.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/uywmvzrds5n4dgrt?serverTimezone=UTC
-#spring.datasource.username=y96gvlekhryr2e12
-#spring.datasource.password=euyoh8lt0sib2th6 
+server.port=8090
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database=MYSQL 
+spring.jpa.show-sql=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://y96gvlekhryr2e12:euyoh8lt0sib2th6@au77784bkjx6ipju.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/uywmvzrds5n4dgrt?serverTimezone=UTC
+spring.datasource.username=y96gvlekhryr2e12
+spring.datasource.password=euyoh8lt0sib2th6 
 
 
 ###################################### LA DE ARRIBA ES LA CONEXION A LA BD REMOTA#########################################
@@ -13,11 +13,11 @@
 ###################################### IMPORTANTE NUNCA CAMBIAN EL UPDATE EN NINGUNA CONEXION ############################
 
 
-server.port=8090
-spring.jpa.hibernate.ddl-auto=update 
-spring.jpa.database=MYSQL 
-spring.jpa.show-sql=true
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/reclutamiento?useSSL=false&serverTimeZone=UTC
-spring.datasource.username=root
-spring.datasource.password=mysql
+#server.port=8090
+#spring.jpa.hibernate.ddl-auto=update 
+#spring.jpa.database=MYSQL 
+#spring.jpa.show-sql=true
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/reclutamiento?useSSL=false&serverTimeZone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=mysql
