se creo repository para modulos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,12 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database=MYSQL 
 spring.jpa.show-sql=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://y96gvlekhryr2e12:euyoh8lt0sib2th6@au77784bkjx6ipju.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/uywmvzrds5n4dgrt?serverTimezone=UTC
-spring.datasource.username=y96gvlekhryr2e12
-spring.datasource.password=euyoh8lt0sib2th6 
-
+#spring.datasource.url=jdbc:mysql://y96gvlekhryr2e12:euyoh8lt0sib2th6@au77784bkjx6ipju.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/uywmvzrds5n4dgrt?serverTimezone=UTC
+#spring.datasource.username=y96gvlekhryr2e12
+#spring.datasource.password=euyoh8lt0sib2th6 
+spring.datasource.url=jdbc:mysql://sql10527834:ehkBmlBhci@sql10.freesqldatabase.com:3306/sql10527834?serverTimezone=UTC 
+spring.datasource.username=sql10527834 
+spring.datasource.password=ehkBmlBhci
 
 ###################################### LA DE ARRIBA ES LA CONEXION A LA BD REMOTA#########################################
 # SOLO QUITEN LOS "#" DE ABAJO Y COLOQUENLOS ARRIBA AL COMIENZO DE CADA LINEA PARA CAMBIAR DE REMOTO A LOCAL O VICEVERSA #
