--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
@@ -53,6 +52,11 @@
 	       <groupId>org.springframework.boot</groupId>
 	       <artifactId>spring-boot-devtools</artifactId>
 	   </dependency>
+	   <dependency>
+		  <groupId>net.sf.jasperreports</groupId>		
+		  <artifactId>jasperreports</artifactId>
+		  <version>6.20.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
