--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,9 @@ spring.jpa.show-sql=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://y96gvlekhryr2e12:euyoh8lt0sib2th6@au77784bkjx6ipju.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/uywmvzrds5n4dgrt?serverTimezone=UTC
 spring.datasource.username=y96gvlekhryr2e12
-spring.datasource.password=euyoh8lt0sib2th6 
+spring.datasource.password=euyoh8lt0sib2th6
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.web.servlet.error.ErrorMvcAutoConfiguration
+server.error.whitelabel.enabled=false 
 #spring.datasource.url=jdbc:mysql://sql10527834:ehkBmlBhci@sql10.freesqldatabase.com:3306/sql10527834?serverTimezone=UTC 
 #spring.datasource.username=sql10527834 
 #spring.datasource.password=ehkBmlBhci
